Fix for overlapping login card and header app bar

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -5,6 +5,8 @@
 .page-header {
     background-color: #263238;
     vertical-align: middle;
+    position: static;
+    margin-bottom: 1%;
 }
 
 .title-text {
